objects/PMC_CPQ_QuoteSubtypeValidationMessage__mdt.object
<CustomObject>
    <fields>
        <fullName>PMC_CPQ_QuoteSubtype__c</fullName>
        <label>Quote Subtype</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_SalesOrg__c</fullName>
        <label>Sales Org</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_ValidationErrorMessage__c</fullName>
        <label>Validation Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>PMC CPQ Quote Subtype Validation Message</label>
    <listViews>
        <fullName>Sales_Org_View</fullName>
        <columns>PMC_CPQ_SalesOrg__c</columns>
        <columns>PMC_CPQ_QuoteSubtype__c</columns>
        <columns>PMC_CPQ_ValidationErrorMessage__c</columns>
        <filterScope>Everything</filterScope>
        <label>Sales Org View</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>PMC CPQ Quote Subtype Validation Message</pluralLabel>
</CustomObject>